@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -35,10 +35,10 @@ import java.util.Locale;
  * @author Masayoshi Okutsu
  */
 public class JRELocaleConstants {
-    public static final Locale JA_JP_JP = new Locale("ja", "JP", "JP");
-    public static final Locale NO_NO_NY = new Locale("no", "NO", "NY");
-    public static final Locale TH_TH    = new Locale("th", "TH");
-    public static final Locale TH_TH_TH = new Locale("th", "TH", "TH");
+    public static final Locale JA_JP_JP = Locale.of("ja", "JP", "JP");
+    public static final Locale NO_NO_NY = Locale.of("no", "NO", "NY");
+    public static final Locale TH_TH    = Locale.of("th", "TH");
+    public static final Locale TH_TH_TH = Locale.of("th", "TH", "TH");
 
     private JRELocaleConstants() {
     }
