@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -2255,7 +2255,7 @@ public class CalendarRegression extends IntlTest {
             errln("equals threw IllegalArugumentException with non-lenient");
         }
 
-        cal1 = Calendar.getInstance(new Locale("th", "TH"));
+        cal1 = Calendar.getInstance(Locale.of("th", "TH"));
         cal1.setTimeInMillis(0L);
         cal2 = Calendar.getInstance(Locale.US);
         cal2.setTimeInMillis(0L);
