@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -43,7 +43,7 @@ public class LocaleNameProviderTests {
     private static final String expected = "foo (foo_ca:foo_japanese)";
 
     public static void main(String... args) {
-        String name = Locale.forLanguageTag("foo-u-ca-japanese").getDisplayName(new Locale("foo"));
+        String name = Locale.forLanguageTag("foo-u-ca-japanese").getDisplayName(Locale.of("foo"));
         if (!name.equals(expected)) {
             throw new RuntimeException("Unicode extension key and/or type name(s) is incorrect. " +
                 "Expected: \"" + expected + "\", got: \"" + name + "\"");
